--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 align-self-center">
-                    <a href="#reserveForm" class="btn bg-info btn-lg text-white mt-4 text-nowrap">Reserve Campsite</a>
+                    <a href="#reserveForm" class="btn bg-info btn-lg text-white mt-4 text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong> (206) 555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -182,6 +182,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 
 </html>
