--- a/aboutus.html
+++ b/aboutus.html
@@ -21,33 +21,40 @@
 
 <body>
 
-    <header class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid bg-white py-3 my-3">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <a href="index.html"><img src="img/logo.png" class="img-fluid"></a>
+                    <img src="img/logo.png" alt="Nucamp logo" class="img-fluid">
                 </div>
                 <div class="col">
-                    <h1>NuCamp</h1>
+                    <h1 class="jumbotronh1">NuCamp</h1>
                     <h2>a better way to camp</h2>
+                </div>
+                <div class="col col-md-4 col-xl-2 mt-4">
+
                 </div>
             </div>
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top ">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light shadow sticky-top">
         <div class="container">
-            <a href="index.html" class="navbar-brand"><img src="img/logo.png" height="30" width="30"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="nucampNavbar">
+            <div class="collapse navbar-collapse text-uppercase" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item "><a href="/" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-info fa-lg"></i> About Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item active"><a href="index.html" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a href="aboutus.html" class="nav-link">About
+                            Us</a></li>
+                    <li class="nav-item"><a href="sites.html" class="nav-link">Sites</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link">Contact</a></li>
                 </ul>
+                <span class="navbar-text ml-auto">
+                    <a role="button" data-toggle="modal" data-target="#loginModal"><i class="fa fa-sign-in"> Login </i></a>
+                </span>
             </div>
         </div>
     </nav>
@@ -233,11 +240,11 @@
 
 
 
-    <footer class="site-footer">
+    <footer class="site-footer text-white p-5">
         <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1 col-xs-6">
-                    <h5>Links</h5>
+            <div class="row row-cols-1 row-cols-md-3 text-center">
+                <div class="col my-3">
+                    <h5>LINK</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
@@ -245,16 +252,18 @@
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
-                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/" class="btn-twitter btn btn-social-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google"><i class="fa fa-youtube"></i></a>
+                <div class="col my-3">
+                    <h5>SOCIAL MEDIA</h5>
+                    <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram" alt="instagram icon"><i class="fa fa-instagram"></i></a>
+                    <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook" alt="facebook icon"><i class="fa fa-facebook"></i></a>
+                    <a href="http://twitter.com/" class="btn btn-social-icon btn-twitter" alt="twitter icon"><i class="fa fa-twitter"></i></a>
+                    <a href="http://youtube.com/" class="btn btn-social-icon btn-google" alt="google icon"><i class="fa fa-youtube"></i></a>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                <div class="col my-3">
+                    <h5>CONTACT</h5>
+                    <a role="button" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                        1-206-555-1234</a><br />
+                    <a role="button" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>
