--- a/index.html
+++ b/index.html
@@ -11,52 +11,63 @@
 
     <!-- Additional CSS -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
 <body>
-    <header class="jumbotron jumbotron-fluid">
+    <header class="jumbotron jumbotron-fluid bg-white py-3 my-3">
         <div class="container">
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <img src="img/logo.png" alt="Nucamp logo" class="img-fluid">
                 </div>
                 <div class="col">
-                    <h1>NuCamp</h1>
+                    <h1 class="jumbotronh1">NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
                 <div class="col col-md-4 col-xl-2 mt-4">
-                    <a href="#reserveForm" class="btn bg-info btn-lg text-white text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong> (206) 555-1234</strong>">Reserve Campsite</a>
+
                 </div>
             </div>
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top ">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light shadow sticky-top">
         <div class="container">
-            <a href="#" class="navbar-brand"><img src="img/logo.png" alt="Nucamp logo" height="30" width="30"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="nucampNavbar">
+            <div class="collapse navbar-collapse text-uppercase" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a href="#" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a>
+                    <li class="nav-item active"><a href="index.html" class="nav-link"><i class="fa fa-home fa-lg"></i> Home</a>
                     </li>
-                    <li class="nav-item"><a href="aboutus.html" class="nav-link"><i class="fa fa-info fa-lg"></i> About
+                    <li class="nav-item"><a href="aboutus.html" class="nav-link">About
                             Us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a href="contactus.html" class="nav-link"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a href="sites.html" class="nav-link">Sites</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link">Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal"><i class="fa fa-sign-in"> Login</i></a>
+                    <a role="button" data-toggle="modal" data-target="#loginModal"><i class="fa fa-sign-in"> Login </i></a>
                 </span>
             </div>
         </div>
     </nav>
+
+    <section class="main">
+        <div class="contain py-5">
+            <div class="row py-5">
+                <div class="col-lg-7 p-5 text-center">
+                    <div class="display-1">NuCamp</div>
+                    <div class="display-4">A Better Way To Camp <i class="fas fa-campground"></i></div>
+                    <a href="#reserveForm" class="mt-5 btn btn-lg btn-danger text-nowrap" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /> <strong> (206) 555-1234</strong>">Reserve Campsite <i class="bi bi-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Modal for login -->
     <div class="modal fade" id="loginModal" role="dialog">
@@ -96,10 +107,44 @@
         </div>
     </div>
 
-    <div class="container">
+    <section class="about bg-light">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col m-auto text-center">
+                    <h1>Welcome To NuCamp</h1>
+                    <h6 style="color: red;">The Great Outdoors is life's biggest playground
+                    </h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail thumbnail" class="img-fluid mb-3">
+                    <h3>Our Campsites</h3>
+                    <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/react-lake.jpg" alt="" class="img-fluid mb-3">
+                    <h3>React Lake Campground</h3>
+                    <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" class="img-fluid mb-3 ">
+                    <h3>Bootstrap Outfitters</h3>
+                    <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 m-auto text-center py-4">
+                    <button class="btnmain">Check Out Blog</button>
+                </div>
+            </div>
+    </section>
+
+
+    <div class="container mb-5">
         <!-- Carousel -->
         <div class="row row-content">
-            <div class="col-md-8 mx-auto">
+            <div class="col-md-8 my-5 mx-auto">
                 <div class="carousel slide" id="homeCarousel" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
@@ -140,61 +185,14 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2 class="text-sm-right">Discover & Review</h2>
-            </div>
-            <div class="col">
-                <div class="media">
-                    <img src="img/breadcrumb-trail-thumb.jpg" alt="Breadcrumb Trail thumbnail" class="d-flex mr-3 img-thumbnail">
-                    <div class="media-body align-self-center">
-                        <h3>Our Campsites</h3>
-                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3">
-                <h2>Featured Campsites</h2>
-            </div>
-            <div class="col">
-                <div class="media">
-                    <div class="media-body align-self-center">
-                        <h3>React Lake Campground</h3>
-                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
-                    </div>
-
-                    <img src="img/react-lake-thumb.jpg" alt="React Lake Campground" class="d-flex img-thumbnail ml-3">
-                </div>
-
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2 class="text-sm-right">Our Community Partners</h2>
-            </div>
-            <div class="col">
-                <div class="media">
-                    <img src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters" class="d-flex mr-3 img-thumbnail">
-                    <div class="media-body align-self-center">
-                        <h3>Bootstrap Outfitters</h3>
-                        <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you
-                            can't beat.</p>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
+    <div class="container-fluid reserveForm bg-light">
         <div class="row row-content">
             <div class="col-sm-6 mx-auto">
                 <div class="card">
-                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                    <h3 class="card-header text-white">Reserve a Campsite</h3>
                     <div class="card-body">
                         <form id="reserveForm">
                             <div class="row form-group">
@@ -210,6 +208,7 @@
                                         <option value="6">6</option>
                                     </select>
                                 </div>
+
                             </div>
                             <div class="row form-group">
                                 <label for="date" class="col-form-label col-sm-6">Date</label>
@@ -219,7 +218,7 @@
                             </div>
                             <div class="row form-group">
                                 <div class="col">
-                                    <button class="btn btn-primary" type="submit">Search</button>
+                                    <button class="btn text-white btn-lg px-5" type="submit">Search</button>
                                 </div>
                             </div>
                         </form>
@@ -228,14 +227,14 @@
 
             </div>
         </div>
-
     </div>
 
-    <footer class="site-footer">
+
+    <footer class="site-footer text-white p-5">
         <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-2 offset-1">
-                    <h5>Links</h5>
+            <div class="row row-cols-1 row-cols-md-3 text-center">
+                <div class="col my-3">
+                    <h5>LINK</h5>
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
@@ -243,17 +242,18 @@
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-5 text-center">
-                    <h5>Social</h5>
+                <div class="col my-3">
+                    <h5>SOCIAL MEDIA</h5>
                     <a href="http://instagram.com/" class="btn btn-social-icon btn-instagram" alt="instagram icon"><i class="fa fa-instagram"></i></a>
                     <a href="http://facebook.com/" class="btn btn-social-icon btn-facebook" alt="facebook icon"><i class="fa fa-facebook"></i></a>
                     <a href="http://twitter.com/" class="btn btn-social-icon btn-twitter" alt="twitter icon"><i class="fa fa-twitter"></i></a>
                     <a href="http://youtube.com/" class="btn btn-social-icon btn-google" alt="google icon"><i class="fa fa-youtube"></i></a>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
+                <div class="col my-3">
+                    <h5>CONTACT</h5>
+                    <a role="button" href="tel:+12065551234"><i class="fa fa-phone"></i>
                         1-206-555-1234</a><br />
-                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                    <a role="button" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
             </div>
         </div>
